--- a/income.css
+++ b/income.css
@@ -2,24 +2,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100&display=swap');
 
+#maindiv1{
 
+    display: grid;
+    grid-template-columns: 100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px;
+    grid-template-rows: 100px, 100px, 100px,100px,100px,100px,100px, 100px,100px,100px,100px,100px;
+    width: 98%;
+}
+
+#menubtns{
+    grid-row-start: 28;
+    grid-row-end:29;
+    right:50%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    text-align-last: center;
+    color: white;
+
+}
+
+
+#inputsf{
+    font-size: 3vh;
+    grid-row-start: 16;
+    grid-row-end: 20;
+    grid-column-start: 2;
+    font-family: 'Smooch Sans', sans-serif;
+    grid-column-end: 3;
+    text-align-last: center;
+    color: white;
+    
+
+}
+h1:hover {
+    font-size: 6.4vh;
+    transition: 0.7s;
+}
 
 h1 {
-    position: relative; 
-	top: 100px;
-    text-align: center;
+    grid-row-start: 1;
+    grid-row-end: 1;
+    grid-column-start: 1;
+    grid-column-end: 4;
     font-family: 'Smooch Sans', sans-serif;
     font-size: 6vh;
     font-style: italic;
     font-weight: bolder;
+    text-align: center;
     color: #fefdfd;
     border-bottom: 1px solid #b1aebb;
     border-top: 1px solid #b1aebb;
     transition: all 0.7s ease; 
-
+    border-width: 100%;
 }
 
-h4 {
+/*h4 {
     position: relative; 
 	top: 100px;
     text-align: center;
@@ -30,7 +67,7 @@ h4 {
     color: #fefdfd;
     transition: all 0.7s ease; 
 
-}
+}*/
 
 body {
     height: 90vh;
@@ -54,15 +91,9 @@ body {
     }
 }
 
-.menubtns{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 button{
     position: relative; 
-    margin-bottom: 0.5px;
+    margin-bottom: 10px;
 	top: 60px;
     padding: 1vh;
     border-color: #fefdfd;
@@ -80,19 +111,11 @@ button{
 button:hover {
     background-color:#7d58eb;
     font-size: 3.2vh;
+
 }
 button:focus {
     outline-color: transparent;
     outline-style: solid;
     box-shadow: 0 0 0 4px orchid;
-    transition: 0.7s;
-}
-h4:hover {
-    color:#af95ff;
-    transition: 0.7s;
-}
-
-h1:hover {
-    font-size: 6.4vh;
     transition: 0.7s;
 }
