--- a/payroll.css
+++ b/payroll.css
@@ -38,7 +38,7 @@ h1 {
     display: grid;
     grid-template-columns: 100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px;
     grid-template-rows: 100px, 100px, 100px,100px,100px,100px,100px, 100px,100px,100px,100px,100px;
-    width: 98%;
+    width: 100%;
 }
 
 #inputbox{
@@ -47,18 +47,27 @@ h1 {
     grid-column-start: 1;
     grid-column-end: 4;
     color: white;
-
+    text-align-last: right;
 
 }
 
+#buttonbox{
+    grid-row-start: 5;
+    grid-row-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    color: white;
+}
 #tablediv{
     grid-row-start: 1;
     grid-row-end: 12;
-    grid-column-start: 8;
+    grid-column-start: 12;
     grid-column-end: 12;
     border-color:   white;
 
 }
+
+
 body {
     height: 90vh;
     width: 100%;
@@ -86,5 +95,32 @@ label {
     font-size: 3;
 }
 
+button{
+    position: relative; 
+    margin-bottom: 10px;
+	top: 60px;
+    padding: 1vh;
+    border-color: #fefdfd;
+    background-color: #5f43b2;
+    border-radius: 15px;
+    color: #fefdfd;
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 2.8vh;
+    font-style: normal;
+    font-weight: bolder;
+    transition: all 0.7s ease; 
 
+}
+
+button:hover {
+    background-color:#7d58eb;
+    font-size: 3.2vh;
+
+}
+button:focus {
+    outline-color: transparent;
+    outline-style: solid;
+    box-shadow: 0 0 0 4px orchid;
+    transition: 0.7s;
+}
 
