--- a/add2numbers.css
+++ b/add2numbers.css
@@ -1,3 +1,110 @@
-.inputsdiv{
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100&display=swap');
+
+#maindiv{
+
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px 100px 100px;
+    gap: 10px;
+    justify-content: center;
+
+
+}
+
+#inandoutbox{
+    grid-row-start: 4;
+    grid-column-start: 5;
+    grid-column-end: 8;
+    font-family: 'Smooch Sans', sans-serif;
+    font-style: italic;
+    font-size: 3vh;
     
+    
+}
+
+#inputbox{
+    text-align-last: right;
+    color:white;
+}
+
+#outputbox{
+    text-align-last: right;
+    color:white;
+
+}
+#headerdiv{
+    position: relative; 
+    color:aliceblue;    
+    border-color: white;
+    grid-row-start:2;
+    grid-column-start: 1;
+    grid-column-end: 12;
+    text-align: center;
+    font-family: 'Smooch Sans', sans-serif;
+    font-style: italic;
+    font-size: 3vh;
+    border-bottom: 1px solid #b1aebb;
+    border-top: 1px solid #b1aebb;
+    
+}
+
+body {
+    height: 90vh;
+    width: 100%;
+    background: linear-gradient(45deg,#3a3153,#5f43b2,#7f5af0,#fefdfd);
+    background-size: 300% 300%;
+    animation: color 10s ease-in-out infinite;
+}
+
+@keyframes color{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+
+        background-position: 100% 50%;
+    }
+    10%{
+
+        background-position: 0 50%;
+    }
+}
+
+h1{
+    justify-items: center;
+}
+
+input{
+    text-align: right;
+    border-radius: 15px;
+}
+
+button{
+    margin-bottom: 10px;
+	top: 60px;
+    padding: 1vh;
+    border-color: #fefdfd;
+    background-color: #5f43b2;
+    border-radius: 15px;
+    color: #fefdfd;
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 2.8vh;
+    font-style: normal;
+    font-weight: bolder;
+    transition: all 0.7s ease; 
+
+}
+
+button:hover {
+    background-color:#7d58eb;
+    font-size: 3.2vh;
+
+}
+button:focus {
+    outline-color: transparent;
+    outline-style: solid;
+    box-shadow: 0 0 0 4px orchid;
+    transition: 0.7s;
 }
