--- a/payroll.css
+++ b/payroll.css
@@ -2,9 +2,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100&display=swap');
 
+
+.labelleft{
+    display:inline-block;
+      width: 80px;
+      text-align :left;
+}
+.alignright{
+    text-align: right;
+}
+#inputgcomp{
+    color: white;  
+}
+#outputgcomp{
+    color: white;
+    font-family: 'Smooch Sans', sans-serif;
+    font-size: 3vh;
+}
+
+
+#maindiv{
+
+    display: grid;
+    grid-template-columns: 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px , 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px, 50px;
+    grid-template-rows: 100px, 100px, 100px,100px,100px,100px,100px, 100px,100px,100px,100px,100px;
+    width: 100%;
+}
+
 h1 {
-    position: relative; 
-	top: 30px;
     text-align: center;
     font-family: 'Smooch Sans', sans-serif;
     font-size: 6vh;
@@ -14,67 +39,95 @@ h1 {
     border-bottom: 1px solid #b1aebb;
     border-top: 1px solid #b1aebb;
 }
-/*table{
-    font-family: 'Smooch Sans', sans-serif;
-    font-size: 6vh;
-    display: flex;
-    flex-direction: column;
-    font-family: 'Smooch Sans', sans-serif;
-    font-size: 2.8vh;
-    font-style: normal;
-    text-align: center;
-    display: grid;
-    justify-items: center;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 10px;
-    border-bottom: 60cm;
-    border: 0px;
 
-}*/
-
-#maindiv{
-
-    display: grid;
-    grid-template-columns: 100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px,100px;
-    grid-template-rows: 100px, 100px, 100px,100px,100px,100px,100px, 100px,100px,100px,100px,100px;
-    width: 100%;
-}
 
 #inputbox{
     grid-row-start: 4;
     grid-row-end: 5;
-    grid-column-start: 1;
+    grid-column-start: 4;
     grid-column-end: 4;
     color: white;
-    text-align-last: right;
+    
+}
+
+#averagesumdiv{
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    color: white;
+}
+
+#ipacenterdiv{
+    color: white;
+    left: 1000px;
+    
 
 }
+
+#factorialdiv{
+    grid-row-start: 5;
+    grid-row-end: 6;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    color: white;
+
+    
+}
+
 
 #buttonbox{
     grid-row-start: 5;
     grid-row-end: 5;
-    grid-column-start: 2;
+    grid-column-start: 4;
     grid-column-end: 4;
     color: white;
 }
 #tablediv{
-    grid-row-start: 1;
-    grid-row-end: 12;
-    grid-column-start: 12;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    grid-column-start: 6;
     grid-column-end: 12;
     border-color:   white;
+    text-align: right;
+}
 
+.alignrightplsdiv{
+    text-align: right;
+}
+
+input{
+    border-radius: 50px;
+    
 }
 
 
+
+th{
+    justify-items: end;
+}
 body {
     height: 90vh;
     width: 100%;
     background: linear-gradient(45deg,#3a3153,#5f43b2,#7f5af0,#fefdfd);
     background-size: 300% 300%;
-    animation: color 15s ease-in-out infinite;
+    animation: color 10s ease-in-out infinite;
 }
+
+@keyframes color{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+
+        background-position: 100% 50%;
+    }
+    10%{
+
+        background-position: 0 50%;
+    }
+}
+
 table {
     border-collapse: collapse;
     font-family: 'Smooch Sans', sans-serif;
@@ -96,10 +149,6 @@ label {
 }
 
 button{
-    position: relative; 
-    margin-bottom: 10px;
-	top: 60px;
-    padding: 1vh;
     border-color: #fefdfd;
     background-color: #5f43b2;
     border-radius: 15px;
@@ -124,3 +173,30 @@ button:focus {
     transition: 0.7s;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    text-align: center;
+  }
+
+  /* Button styles */
+  #confirmDelete, #cancelDelete {
+    padding: 10px;
+    margin: 5px;
+    cursor: pointer;
+  }
